# ESE5190_LAB2B_PART1-10

./: README.md
-02/: pio_seq.uf2
01/: Part-1.c  README.md
02/: README.md  REPL (1).c
03/: README.md  Sequencer.c  data_transfer.c
04/: MainCode.c  README.md  boot_button.c  data_transfer.h
05/: CMakeLists.txt  Firefly (2).py  README.md
06/: CMakeLists (1).txt  README.md  desktop.ini  logic_analyser.c
07/: CMakeLists.txt  MainCode.c  README.md  neopixel.c  neopixel.h  pio_seq.pio  pio_seq.pio.h  registers.c  registers.h  ws2812.pio
08/: APDS9960.c  APDS9960.h  README.md  pio_i2c.c
09/: APDS9960.c  APDS9960.h  CMakeLists.txt  README.md  i2c.pio  main.c  neopixel.c  neopixel.h  pio_i2c.h  piosequencer.c  piosequencer.h
10/: CMakeLists.txt  MainCode.c  README.md  boot_button.c  boot_button.h
